Add typoscript syntax highlighting (Typo3 CMS)

--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -7,6 +7,7 @@ Plug 'pangloss/vim-javascript'
 Plug '2072/PHP-Indenting-for-VIm'
 Plug 'mipmip/vim-fluid'
 Plug 'morhetz/gruvbox'
+Plug 'elmar-hinz/vim.typoscript'
 " Snippets
 Plug 'MarcWeber/vim-addon-mw-utils'
 Plug 'tomtom/tlib_vim'
