Surround plugin added

--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -10,6 +10,7 @@ Plug 'morhetz/gruvbox'
 Plug 'elmar-hinz/vim.typoscript'
 Plug 'posva/vim-vue'
 Plug 'mbbill/undotree'
+Plug 'tpope/vim-surround'
 " Snippets
 Plug 'MarcWeber/vim-addon-mw-utils'
 Plug 'tomtom/tlib_vim'
